--- a/templates/networks/network_list.html
+++ b/templates/networks/network_list.html
@@ -57,8 +57,8 @@
                                 </div>
                                 <div>
                                     <p class="font-bold text-slate-800">{{ n.name_ar }}</p>
-                                    <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">{{
-                                        n.name_en }}</p>
+                                    <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">
+                                        {{ n.name_en }}</p>
                                 </div>
                             </div>
                         </td>
