--- a/templates/policies/policy_detail.html
+++ b/templates/policies/policy_detail.html
@@ -120,8 +120,9 @@
                             </div>
                             <div class="text-left">
                                 <span class="block text-[9px] font-black text-slate-400 uppercase">Limit</span>
-                                <span class="text-slate-800 font-mono font-black">{{ c.annual_limit|floatformat:0
-                                    }}</span>
+                                <span class="text-slate-800 font-mono font-black">
+                                    {{ c.annual_limit|floatformat:0 }}
+                                </span>
                                 <span class="text-[9px] text-slate-400">SAR</span>
                             </div>
                         </div>
