--- a/templates/members/member_detail.html
+++ b/templates/members/member_detail.html
@@ -117,8 +117,8 @@
                                 <td class="px-6 py-4 font-bold text-slate-800">{{ dep.full_name }}</td>
                                 <td class="px-6 py-4 text-center">
                                     <span
-                                        class="text-[10px] bg-indigo-50 text-indigo-700 px-2 py-0.5 rounded font-black">{{
-                                        dep.get_relation_display }}</span>
+                                        class="text-[10px] bg-indigo-50 text-indigo-700 px-2 py-0.5 rounded font-black">
+                                        {{ dep.get_relation_display }}</span>
                                 </td>
                                 <td class="px-6 py-4 text-center font-mono text-slate-500">{{ dep.medical_card_number }}
                                 </td>
